# url-shortener-django-modern-rest-example

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  RUNNING.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
apps/urlshortener/: admin.py  apps.py  factories.py
apps/urlshortener/api/: controllers.py  mappers.py  routers.py  schemas.py
apps/urlshortener/domain/: constants.py  exceptions.py  intefaces.py  interfaces.py  models.py  services.py
apps/urlshortener/infrastructure/: mappers.py  models.py  repositories.py
apps/urlshortener/migrations/: 0001_initial.py  0002_alter_shortlinkmodel_short_code.py
config/: settings.py  urls.py
tests/: conftest.py
tests/plugins/: django_settings.py
tests/test_apps/test_urlshortener/: test_api.py  test_domain.py  test_models.py  test_schema.py
